force-app/main/default/objects/fw1__Recurring_Invoice__c/fw1__Recurring_Invoice__c.object-meta.xml
<CustomObject>
    <label>Recurring Invoice</label>
    <nameField>
        <label>Recurring Invoice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recurring Invoices</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>