force-app/main/default/objects/fw1__Recurring_Invoice__c/fields/fw1__Account__c.field-meta.xml
<CustomField>
    <fullName>fw1__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Recurring Invoices</relationshipLabel>
    <relationshipName>Recurring_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>