force-app/main/default/objects/fw1__Recurring_Invoice__c/fields/fw1__Add_Prorated_Amount_On_Next_Invoice__c.field-meta.xml
<CustomField>
    <fullName>fw1__Add_Prorated_Amount_On_Next_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add Prorated Amount On Next Invoice</label>
    <type>Checkbox</type>
</CustomField>