force-app/main/default/objects/fw1__Recurring_Invoice__c/fields/fw1__Auto_BillPay_Options__c.field-meta.xml
<CustomField>
    <fullName>fw1__Auto_BillPay_Options__c</fullName>
    <label>Auto-BillPay Options</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billing Period Start</fullName>
                <default>true</default>
                <label>Billing Period Start</label>
            </value>
            <value>
                <fullName>Billing Period End</fullName>
            </value>
            <value>
                <fullName>Invoice Date</fullName>
            </value>
            <value>
                <fullName>Invoice Due Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>