force-app/main/default/objects/fw1__Recurring_Invoice__c/fields/fw1__Bank_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>fw1__Bank_Account_Type__c</fullName>
    <label>Bank Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Checking</fullName>
            </value>
            <value>
                <fullName>Savings</fullName>
            </value>
            <value>
                <fullName>Business Checking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>