force-app/main/default/objects/fw1__Recurring_Invoice__c/fields/fw1__Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>fw1__Billing_Country__c</fullName>
    <label>Billing Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>