force-app/main/default/objects/fw1__Recurring_Invoice__c/fields/fw1__Billing_Period_End__c.field-meta.xml
<CustomField>
    <fullName>fw1__Billing_Period_End__c</fullName>
    <inlineHelpText>Billing period of the next invoice.</inlineHelpText>
    <label>Billing Period End</label>
    <type>Date</type>
</CustomField>