force-app/main/default/objects/fw1__Recurring_Invoice__c/fields/fw1__Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>fw1__Billing_Street__c</fullName>
    <inlineHelpText>On edit, you can leave this blank and the account&apos;s billing address will be taken.</inlineHelpText>
    <label>Billing Street</label>
    <type>TextArea</type>
</CustomField>