force-app/main/default/objects/fw1__Recurring_Invoice__c/fields/fw1__Card_Expires_Before_Recurring_Expires__c.field-meta.xml
<CustomField>
    <fullName>fw1__Card_Expires_Before_Recurring_Expires__c</fullName>
    <formula>IF( fw1__Credit_Card_Expiration_Days__c  &lt;  fw1__Expiring_In_Days__c , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Card Expires Before Recurring Expires</label>
    <type>Checkbox</type>
</CustomField>