force-app/main/default/objects/fw1__Recurring_Invoice__c/fields/fw1__Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>fw1__Contact_Name__c</fullName>
    <formula>TRIM(fw1__Contact__r.FirstName + &apos; &apos; + fw1__Contact__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>