force-app/main/default/objects/fw1__Recurring_Invoice__c/fields/fw1__Credit_Card_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>fw1__Credit_Card_Expiration_Date__c</fullName>
    <formula>IF(fw1__Payment_Profile__c != null,fw1__Payment_Profile__r.fw1__Credit_Card_Expiration_Date__c,
IF(TEXT(fw1__Expiry_Month__c) == &apos;12&apos;,DATEVALUE(fw1__Expiry_Year__c + &apos;-12-31&apos;), 
DATE(VALUE(fw1__Expiry_Year__c), VALUE(TEXT(fw1__Expiry_Month__c)) + 1, 1) - 1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Card Expiration Date</label>
    <type>Date</type>
</CustomField>