force-app/main/default/objects/fw1__Recurring_Invoice__c/fields/fw1__Credit_Card_Expiration_Days__c.field-meta.xml
<CustomField>
    <fullName>fw1__Credit_Card_Expiration_Days__c</fullName>
    <formula>IF(NOT(ISNULL( fw1__Payment_Profile__c )) || NOT(ISBLANK(fw1__Expiry_Year__c)) &amp;&amp; NOT(ISBLANK(TEXT(fw1__Expiry_Month__c))) &amp;&amp; NOT(fw1__Expiry_Year__c == &apos;Year&apos;) &amp;&amp; NOT(TEXT(fw1__Expiry_Month__c) == &apos;Month&apos;),
fw1__Credit_Card_Expiration_Date__c - TODAY(),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Card Expiration Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>