force-app/main/default/objects/fw1__Recurring_Invoice__c/fields/fw1__Credit_Card_Type__c.field-meta.xml
<CustomField>
    <fullName>fw1__Credit_Card_Type__c</fullName>
    <label>Credit Card Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Visa</fullName>
            </value>
            <value>
                <fullName>MasterCard</fullName>
            </value>
            <value>
                <fullName>Discover</fullName>
            </value>
            <value>
                <fullName>Amex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>