force-app/main/default/objects/fw1__Recurring_Invoice__c/fields/fw1__Currency__c.field-meta.xml
<CustomField>
    <fullName>fw1__Currency__c</fullName>
    <label>Currency</label>
    <length>10</length>
    <type>Text</type>
</CustomField>