force-app/main/default/objects/fw1__Recurring_Invoice__c/fields/fw1__Customer_Profile_Id__c.field-meta.xml
<CustomField>
    <fullName>fw1__Customer_Profile_Id__c</fullName>
    <label>Customer Profile Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>