force-app/main/default/objects/fw1__Recurring_Invoice__c/fields/fw1__Daily_Rate__c.field-meta.xml
<CustomField>
    <fullName>fw1__Daily_Rate__c</fullName>
    <label>Daily Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>