force-app/main/default/objects/fw1__Recurring_Invoice__c/fields/fw1__Do_Not_Send_Invoice__c.field-meta.xml
<CustomField>
    <fullName>fw1__Do_Not_Send_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to create the invoice, but not email the customer</inlineHelpText>
    <label>Do Not Send Invoice</label>
    <type>Checkbox</type>
</CustomField>