force-app/main/default/objects/fw1__Recurring_Invoice__c/fields/fw1__Email_CC_Recipients__c.field-meta.xml
<CustomField>
    <fullName>fw1__Email_CC_Recipients__c</fullName>
    <label>Email CC Recipients</label>
    <length>255</length>
    <type>Text</type>
</CustomField>