force-app/main/default/objects/fw1__Recurring_Invoice__c/fields/fw1__Email_Message__c.field-meta.xml
<CustomField>
    <fullName>fw1__Email_Message__c</fullName>
    <inlineHelpText>On edit, you can leave this blank and the default email message will be taken.</inlineHelpText>
    <label>Email Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>