force-app/main/default/objects/fw1__Recurring_Invoice__c/fields/fw1__Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>fw1__Email_Subject__c</fullName>
    <inlineHelpText>On edit, you can leave this blank and the default email subject will be taken.</inlineHelpText>
    <label>Email Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>