force-app/main/default/objects/fw1__Recurring_Invoice__c/fields/fw1__Exempt_From_Balance_Rollovers__c.field-meta.xml
<CustomField>
    <fullName>fw1__Exempt_From_Balance_Rollovers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exempt From Balance Rollovers</label>
    <type>Checkbox</type>
</CustomField>