force-app/main/default/objects/fw1__Recurring_Invoice__c/fields/fw1__Expiring_In_Days__c.field-meta.xml
<CustomField>
    <fullName>fw1__Expiring_In_Days__c</fullName>
    <formula>fw1__End_Date__c -  TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiring In (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>