force-app/main/default/objects/fw1__Recurring_Invoice__c/fields/fw1__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>fw1__Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>