force-app/main/default/objects/fw1__Recurring_Invoice__c/fields/fw1__Is_Stop__c.field-meta.xml
<CustomField>
    <fullName>fw1__Is_Stop__c</fullName>
    <formula>IF(fw1__Occurrences__c &lt;= fw1__Invoice_Created__c &amp;&amp; fw1__Occurrences__c &gt; 0,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Stop</label>
    <type>Checkbox</type>
</CustomField>