force-app/main/default/objects/fw1__Recurring_Invoice__c/fields/fw1__Last_Name__c.field-meta.xml
<CustomField>
    <fullName>fw1__Last_Name__c</fullName>
    <label>Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>