force-app/main/default/objects/fw1__Recurring_Invoice__c/fields/fw1__Next_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>fw1__Next_Invoice_Date__c</fullName>
    <label>Next Invoice Date</label>
    <type>Date</type>
</CustomField>