force-app/main/default/objects/fw1__Recurring_Invoice__c/fields/fw1__Occurrences__c.field-meta.xml
<CustomField>
    <fullName>fw1__Occurrences__c</fullName>
    <label>Occurrences</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>