force-app/main/default/objects/fw1__Recurring_Invoice__c/fields/fw1__Original_Authorized_Amount__c.field-meta.xml
<CustomField>
    <fullName>fw1__Original_Authorized_Amount__c</fullName>
    <label>Original Authorized Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>