force-app/main/default/objects/fw1__Recurring_Invoice__c/fields/fw1__Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>fw1__Payment_Method__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Credit Card</fullName>
                <default>true</default>
                <label>Credit Card</label>
            </value>
            <value>
                <fullName>eCheck</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>