force-app/main/default/objects/fw1__Recurring_Invoice__c/fields/fw1__PO_Number__c.field-meta.xml
<CustomField>
    <fullName>fw1__PO_Number__c</fullName>
    <label>PO Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>