force-app/main/default/objects/fw1__Recurring_Invoice__c/fields/fw1__Prorated_Amount__c.field-meta.xml
<CustomField>
    <fullName>fw1__Prorated_Amount__c</fullName>
    <formula>IF( fw1__Add_Prorated_Amount_On_Next_Invoice__c, 
    (fw1__Next_Invoice_Date__c -  fw1__Start_Date__c) * fw1__Daily_Rate__c , 
    0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Prorated amount from Start Date to Next Invoice Date</inlineHelpText>
    <label>Prorated Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>