force-app/main/default/objects/fw1__Recurring_Invoice__c/fields/fw1__Recipient_Email__c.field-meta.xml
<CustomField>
    <fullName>fw1__Recipient_Email__c</fullName>
    <inlineHelpText>Enter recipient email, or if a Contact is selected, you can leave this blank and the contact&apos;s email will be taken.</inlineHelpText>
    <label>Recipient Email</label>
    <type>Email</type>
</CustomField>