force-app/main/default/objects/fw1__Recurring_Invoice__c/fields/fw1__Reset_Token_On_Next_Run__c.field-meta.xml
<CustomField>
    <fullName>fw1__Reset_Token_On_Next_Run__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reset Token On Next Run</label>
    <type>Checkbox</type>
</CustomField>