force-app/main/default/objects/fw1__Recurring_Invoice__c/fields/fw1__Schedule__c.field-meta.xml
<CustomField>
    <fullName>fw1__Schedule__c</fullName>
    <label>Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Bi-weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Every 4 Weeks</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semi-annually</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
            <value>
                <fullName>Every 2 Years</fullName>
            </value>
            <value>
                <fullName>Every 3 Years</fullName>
            </value>
            <value>
                <fullName>Every 4 Years</fullName>
            </value>
            <value>
                <fullName>Every 5 Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>