force-app/main/default/objects/fw1__Recurring_Invoice__c/fields/fw1__Shipping_Street__c.field-meta.xml
<CustomField>
    <fullName>fw1__Shipping_Street__c</fullName>
    <label>Shipping Street</label>
    <type>TextArea</type>
</CustomField>