force-app/main/default/objects/fw1__Recurring_Invoice__c/fields/fw1__Tax_Amount_Override__c.field-meta.xml
<CustomField>
    <fullName>fw1__Tax_Amount_Override__c</fullName>
    <label>Tax Amount Override</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>