force-app/main/default/objects/fw1__Recurring_Invoice__c/fields/fw1__Terms_And_Conditions__c.field-meta.xml
<CustomField>
    <fullName>fw1__Terms_And_Conditions__c</fullName>
    <inlineHelpText>On edit, you can leave this blank and the default terms and conditions will be taken.</inlineHelpText>
    <label>Terms And Conditions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>