force-app/main/default/objects/fw1__Recurring_Invoice__c/fields/fw1__Token__c.field-meta.xml
<CustomField>
    <fullName>fw1__Token__c</fullName>
    <label>Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>