force-app/main/default/objects/fw1__Recurring_Invoice__c/fields/fw1__Token_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>fw1__Token_Display_Name__c</fullName>
    <label>Token Display Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>