force-app/main/default/objects/fw1__Recurring_Invoice__c/fields/fw1__Total_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>fw1__Total_Invoice_Amount__c</fullName>
    <formula>fw1__Net_Amount__c + 
fw1__Tax_Amount__c + 
fw1__Shipping_And_Handling__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Invoice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>