force-app/main/default/objects/fw1__Recurring_Invoice__c/fields/fw1__Total_Lines_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>fw1__Total_Lines_Discount_Amount__c</fullName>
    <label>Total Lines Discount Amount</label>
    <summarizedField>fw1__Recurring_Invoice_Line__c.fw1__Discount_Amount__c</summarizedField>
    <summaryForeignKey>fw1__Recurring_Invoice_Line__c.fw1__Recurring_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>