force-app/main/default/objects/fw1__Recurring_Invoice__c/fields/fw1__Total_Recurring_Amount__c.field-meta.xml
<CustomField>
    <fullName>fw1__Total_Recurring_Amount__c</fullName>
    <formula>ROUND(
fw1__Net_Recurring_Amount__c  + 
fw1__Tax_Recurring_Amount__c  +  
fw1__Shipping_And_Handling__c,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays total recurring amount. This excludes non-recurring line items.</inlineHelpText>
    <label>Total Recurring Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>