force-app/main/default/objects/fw1__Recurring_Invoice__c/fields/fw1__Total_Taxable_Recurring_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>fw1__Total_Taxable_Recurring_Discount_Amount__c</fullName>
    <formula>(fw1__Total_Lines_Taxable_Recurring_Amount__c *  fw1__Invoice_Discount_Percentage__c) + fw1__Invoice_Discount_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Taxable Recurring Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>